--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^3.7.0",
-    "@blueprintjs/icons": "^3.2.0",
     "classnames": "^2.2.6",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
+    "react": "^16.8.0-alpha.0",
+    "react-dom": "^16.8.0-alpha.0",
     "react-draggable": "^3.0.5",
     "react-scripts": "^2.0.5",
     "react-virtualized": "^9.20.1",
-    "react-window": "^1.2.4"
+    "react-window": "^1.2.4",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
