--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "^2.0.5",
     "react-virtualized": "^9.20.1",
     "react-window": "^1.2.4",
-    "resize-observer-polyfill": "^1.5.1"
+    "resize-observer-polyfill": "^1.5.1",
+    "scheduler": "^0.13.0-alpha.0"
   },
   "scripts": {
     "start": "react-scripts start",
